# uamappers

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  Dockerfile.api  Dockerfile.worker  LICENSE  NOTICE  README.md  docker-compose.yml  justfile  package.json
apps/api/: Cargo.toml  Dockerfile
apps/api/migrations/: 0001_init.sql  0002_kudosu_and_beatmaps.sql  0003_beatmapsets_raw_and_counts.sql  m20260306_000001_create_scan_and_ua_mappers.rs  m20260306_000002_create_osu_users_and_beatmapsets.rs  m20260306_000003_create_osu_user_beatmapsets.rs  m20260311_000004_create_mapper_profiles.rs  m20260311_000005_create_beatmapset_profiles.rs  m20260311_000006_create_beatmap_profiles.rs  m20260311_000007_create_mapper_stats_current.rs  m20260311_000008_create_leaderboard_positions_current.rs  m20260311_000009_create_mapper_aggregate_snapshots_weekly.rs  m20260311_000010_create_beatmapset_snapshots_weekly.rs  m20260312_000011_strip_page_from_osu_users_raw.rs  m20260312_000012_add_kudosu_available_to_mapper_stats_current.rs  m20260312_000013_drop_mapper_profiles.rs  m20260312_000014_reduce_mapper_stats_current.rs  m20260312_000015_reduce_leaderboard_positions_current.rs  m20260312_000016_reduce_beatmapset_profiles.rs  m20260312_000017_optimize_mapper_snapshots_weekly.rs  m20260312_000018_optimize_beatmapset_snapshots_weekly.rs  m20260312_000019_shrink_beatmapsets_raw.rs  m20260312_000020_create_beatmapset_extras.rs  m20260312_000021_drop_beatmapsets.rs  m20260312_000022_remove_creator_fields_from_profiles.rs  m20260312_000023_add_hot_read_indexes.rs  m20260312_000024_compact_storage_codes.rs  m20260312_000025_drop_redundant_created_at.rs  m20260313_000026_add_details_unavailable_to_beatmapset_extras.rs  m20260313_000027_reduce_beatmapset_storage_fields.rs  m20260314_000028_backfill_unspecified_genre_language.rs  m20260314_000029_remove_beatmapset_detail_fields.rs  mod.rs
apps/api/src/: lib.rs  main.rs
apps/api/src/app/: mod.rs  openapi.rs  router.rs  state.rs
apps/api/src/entities/: beatmapset.rs  mapper.rs  mod.rs  osu_user.rs  ua_mapper.rs
apps/api/src/entities/beatmap/: profile.rs
apps/api/src/entities/beatmapset/: cache.rs  extra.rs  profile.rs  snapshot_weekly.rs
apps/api/src/entities/leaderboard/: position_current.rs
apps/api/src/entities/mapper/: aggregate_snapshot_weekly.rs  profile.rs  stats_current.rs
apps/api/src/entities/osu/: user.rs  user_beatmapset.rs
apps/api/src/entities/system/: scan_state.rs
apps/api/src/features/: mod.rs
apps/api/src/features/beatmapsets/: mod.rs  routes.rs
apps/api/src/features/beatmapsets/http/: dto.rs  handlers.rs  mod.rs
apps/api/src/features/beatmapsets/http/presenters/: charts.rs  details.rs  mod.rs
apps/api/src/features/beatmapsets/openapi/: mod.rs  paths.rs
apps/api/src/features/beatmapsets/usecases/: chart_points.rs  mod.rs  queries.rs  types.rs
apps/api/src/features/ingest/: mod.rs  routes.rs
apps/api/src/features/ingest/http/: dto.rs  handlers.rs
apps/api/src/features/ingest/openapi/: mod.rs  paths.rs
apps/api/src/features/ingest/storage/: repo.rs
apps/api/src/features/ingest/usecases/: mod.rs  status.rs
apps/api/src/features/leaderboards/: routes.rs
apps/api/src/features/leaderboards/http/: dto.rs  handlers.rs
apps/api/src/features/leaderboards/openapi/: mod.rs  paths.rs
apps/api/src/features/leaderboards/usecases/: mod.rs  queries.rs  types.rs
apps/api/src/features/mappers/: mod.rs  routes.rs
apps/api/src/features/mappers/discovery/: mod.rs
apps/api/src/features/mappers/domain/: model.rs
apps/api/src/features/mappers/http/: dto.rs  handlers.rs  pagination.rs
apps/api/src/features/mappers/http/handlers/: beatmapsets.rs  charts.rs  common.rs  get.rs  list.rs  mod.rs
apps/api/src/features/mappers/http/presenters/: beatmapsets.rs  mapper.rs  mod.rs
apps/api/src/features/mappers/openapi/: mod.rs  paths.rs
apps/api/src/features/mappers/storage/: beatmapset_repo.rs  codes.rs  mod.rs  osu_user_beatmapset_repo.rs  osu_user_repo.rs  repo.rs  ua_mapper_repo.rs
apps/api/src/features/mappers/usecases/: chart_points.rs  current_stats.rs  mod.rs  profile.rs  queries.rs  types.rs
apps/api/src/features/system/: mod.rs  routes.rs
apps/api/src/features/system/http/: dto.rs  handlers.rs
apps/api/src/features/system/openapi/: mod.rs  paths.rs
apps/api/src/infra/config/: mod.rs
apps/api/src/infra/db/: mod.rs
apps/api/src/openapi/: mod.rs
apps/api/src/shared/: mod.rs  ranking.rs
apps/api/src/shared/db_url/: mod.rs
apps/api/src/shared/errors/: api_error.rs  mod.rs  response.rs
apps/api/tests/: clamp_limit.rs  db_url.rs
apps/worker/: Cargo.toml  Dockerfile
apps/worker/src/: config.rs  error.rs  lib.rs  main.rs  scanner.rs
apps/worker/src/app/: bootstrap.rs  mod.rs  run.rs  tracing.rs
apps/worker/src/features/ingest/: mod.rs
apps/worker/src/features/ingest/osu_client/: client.rs  mod.rs  throttle.rs
apps/worker/src/infra/: config.rs
apps/worker/src/shared/: time.rs
tests/: Cargo.toml  api_casing.rs  beatmapset_details_dto.rs  clamp_limit.rs  mapper_aggregate.rs  mapper_page_dto.rs  mapper_profile_dto.rs  mapper_projection.rs  mapper_snapshot.rs
tests/src/: lib.rs
(+157 files in other folders)
