[workspace]
resolver = "2"
members = [
  "apps/api",
  "apps/worker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
axum = "0.8.8"
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer" }
sea-orm = { version = "1.1.19", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.11"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
