[package]
name = "uamappers-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "uamappers_api"
path = "src/lib.rs"

[[bin]]
name = "uamappers-api"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
axum.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
