[package]
name = "uamappers-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
rosu-v2.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uamappers-api = { path = "../api" }
