[package]
name = "uamappers-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "uamappers-worker"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
rosu-v2.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
uamappers-api = { path = "../api" }
